Solved : in light mode, game info is unreadable

--- a/css/game.css
+++ b/css/game.css
@@ -277,6 +277,10 @@
   z-index: 4;
 }
 
+.light-mode #info {
+  background-color: var(--light-dark);
+}
+
 #info h2 {
   font-size: 2.7em;
   flex: 1 1 auto;
